--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "awesome-react-calculator": "^1.1.0",
     "date-fns": "^2.27.0",
     "formik": "^2.2.9",
     "highcharts": "^9.3.2",
