--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.1.1",
     "react-i18next": "^11.14.3",
     "react-media-hook": "^0.4.9",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-snowfall": "^1.1.1",
+    "react-toastify": "^8.1.0",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
