--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "predeploy": "yarn build",
+    "deploy": "netlify deploy -p"
   },
   "eslintConfig": {
     "extends": [
