--- a/package.json
+++ b/package.json
@@ -44,12 +44,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "babel src -d lib",
+    "build": "react-script build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "prepare": "husky install",
-    "predeploy": "yarn build",
-    "deploy": "netlify deploy -p"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
