--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prepare": "husky install",
-    "predeploy": "yarn build",
+    "predeploy": "yarn run build",
     "deploy": "netlify deploy -p"
   },
   "eslintConfig": {
