--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "formik": "^2.2.9",
     "highcharts": "^9.3.2",
     "highcharts-react-official": "^3.1.0",
+    "i18next": "^21.6.3",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-http-backend": "^1.3.1",
     "magic-snowflakes": "^6.0.1",
     "modern-normalize": "^1.1.0",
     "netlify-cli": "^8.2.4",
@@ -28,7 +31,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.1.1",
-    "react-i18next": "^11.14.3",
+    "react-i18next": "^11.15.1",
     "react-media-hook": "^0.4.9",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
