--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "awesome-react-calculator": "^1.1.0",
+    "babel-plugin-styled-components": "^2.0.2",
     "date-fns": "^2.27.0",
     "formik": "^2.2.9",
     "highcharts": "^9.3.2",
