--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-hot-toast": "^2.1.1",
     "react-i18next": "^11.15.1",
     "react-media-hook": "^0.4.9",
